# image-optimisation-tools

./: CMakeLists.txt  Doxyfile  GroupProject-ReportTemplate.docx  LICENSE  README.md  References.md
.github/workflows/: cpp-build.yml
Output/: README.md
Scans/: README.md
docs/html/: Filter_8cpp.html  Filter_8cpp__incl.map  Filter_8cpp__incl.md5  Filter_8cpp_source.html  Image_8cpp.html  Image_8cpp.js  Image_8cpp__incl.map  Image_8cpp__incl.md5  Image_8cpp_source.html  Projection_8cpp.html  Projection_8cpp__incl.map  Projection_8cpp__incl.md5  Projection_8cpp_source.html  Slice_8cpp.html  Slice_8cpp__incl.map  Slice_8cpp__incl.md5  Slice_8cpp_source.html  Volume_8cpp.html  Volume_8cpp.js  Volume_8cpp__incl.map  Volume_8cpp__incl.md5  Volume_8cpp_a236da76f72861ea5da08f8b3f19dda3a_icgraph.map  Volume_8cpp_a236da76f72861ea5da08f8b3f19dda3a_icgraph.md5  Volume_8cpp_a931100806e4dc14dd0f1c25cb05e6d74_cgraph.map  Volume_8cpp_a931100806e4dc14dd0f1c25cb05e6d74_cgraph.md5  Volume_8cpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.map  main_8cpp__incl.md5  (+57 more)
src/: Filter.cpp  Image.cpp  Projection.cpp  Slice.cpp  Volume.cpp  main.cpp
tests/: CMakeLists.txt  FilterTests.cpp  FilterTests.h  ImageTests.cpp  ImageTests.h  ProjectionTests.cpp  ProjectionTests.h  SliceTests.cpp  SliceTests.h  SpeedTests.cpp  SpeedTests.h  VolumeTests.cpp  VolumeTests.h  test_main.cpp
(+19 files in other folders)
